<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            android:selectable="false"
            android:enabled="true"
            android:key="signature"
            android:title="@string/signature_title"
            android:summary="@string/signature_summary" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/extra_header">

        <SwitchPreferenceCompat
            app:key="newOnTop"
            app:summaryOn="@string/rootPref2"
            app:summaryOff="@string/rootPref3"
            app:title="@string/rootPref1" />

        <SwitchPreferenceCompat
            app:key="widgetJumpInput"
            app:summaryOff="@string/widgetJumpInput_summary_off"
            app:summaryOn="@string/widgetJumpInput_summary_on"
            app:title="@string/widgetJumpInput_title" />

        <SwitchPreferenceCompat
            app:key="darkMode"
            app:title="@string/rootPref7" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/rootPref8">
        <Preference
            android:selectable="false"
            android:title="@string/rootPref9"
            android:key="BackupInfo"
            android:summary="@string/rootPref10" />
        <Preference
            android:title="@string/rootPref11"
            android:key="Backup"
            android:summary="@string/rootPref12" />
        <Preference
            android:title="@string/rootPref13"
            android:key="Restore"
            android:summary="@string/rootPref14" />
    </PreferenceCategory>

</PreferenceScreen>
